[Jamie]-1st Commit-feat function fetchWeather(region, day) in index.js

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
         <h1>台灣本島の縣市刻板印象</h1>
         <hr />
         <div class="box" v-if="now">
-          <h4>縣市：{{now.place}}</h4>
-          <p>特色：{{now.features}}</p>
+          <!-- <h4>縣市：{{now.place}}</h4>
+          <p>特色：{{now.features}}</p> -->
+          <h4 class="now_place"></h4>
+          <p class="now_weather"></p>
         </div>
         <!--     </div> -->
       </div>
