--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
   <body>
     <div id="container">
       <div class="overlay"></div>
-      <div class="title">台灣本島の天気</div>
       <div class="modal" id="modal">
+        <div class="weather">
+          <!-- img要用js插入 -->
+          <img id="weatherIcon" src="./assets/isClear.png" alt="" />
+        </div>
         <!--     <div class="mytitle"> -->
         <h1>台灣本島の天気???</h1>
         <hr />
@@ -24,6 +27,10 @@
       </div>
       <?xml version="1.0" encoding="utf-8"?>
       <!-- Generator: Adobe Illustrator 16.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+      <div class="title">台灣本島の天気</div>
+      <div class="walking">
+        <img id="mario" src="./assets/mario.png" alt="" />
+      </div>
       <svg
         version="1.1"
         id="svg2600"
