--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>台灣本島ののの</title>
+    <title>マリオ 4 fun</title>
     <script src="./script/index.js" defer></script>
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
