Fix: Chang background image

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <!-- Generator: Adobe Illustrator 16.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
       <div class="title">台灣本島の天気</div>
       <div class="walking">
-        <img id="mario" src="./assets/mario.png" alt="" />
+        <img id="mario" onclick="gethelp()" src="./assets/mario.png" alt="" />
       </div>
       <img id="close" src="./assets/close.png" />
       <div class="citySelector" id="citySelector">
