[Jamie]-8th Commit-feat case Enter:

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <li id="helpList10">雲林縣</li>
         <li id="helpList11">嘉義縣</li>
         <li id="helpList12">嘉義市</li>
-        <li id="helpList13">台南市</li>
+        <li id="helpList13">臺南市</li>
         <li id="helpList14">高雄市</li>
         <li id="helpList15">屏東縣</li>
         <li id="helpList16">臺東縣</li>
@@ -1666,7 +1666,7 @@
         <li id="helpList10">雲林縣</li>
         <li id="helpList11">嘉義縣</li>
         <li id="helpList12">嘉義市</li>
-        <li id="helpList13">台南市</li>
+        <li id="helpList13">臺南市</li>
         <li id="helpList14">高雄市</li>
         <li id="helpList15">屏東縣</li>
         <li id="helpList16">臺東縣</li>
