Fix: Modify styles and remove some icons.

--- a/index.html
+++ b/index.html
@@ -31,29 +31,32 @@
       <div class="walking">
         <img id="mario" src="./assets/mario.png" onclick="gethelp()" alt="" />
       </div>
-      <img id="close" src="./assets/close.png" />
-      <div class="citySelector" id="citySelector">
-        <div id="arrow" class="arrow">►</div>
-        <li id="helpList0">基隆市</li>
-        <li id="helpList1">新北市</li>
-        <li id="helpList2">臺北市</li>
-        <li id="helpList3">桃園市</li>
-        <li id="helpList4">新竹市</li>
-        <li id="helpList5">新竹縣</li>
-        <li id="helpList6">苗栗縣</li>
-        <li id="helpList7">臺中市</li>
-        <li id="helpList8">彰化縣</li>
-        <li id="helpList9">南投縣</li>
-        <li id="helpList10">雲林縣</li>
-        <li id="helpList11">嘉義縣</li>
-        <li id="helpList12">嘉義市</li>
-        <li id="helpList13">臺南市</li>
-        <li id="helpList14">高雄市</li>
-        <li id="helpList15">屏東縣</li>
-        <li id="helpList16">臺東縣</li>
-        <li id="helpList17">花蓮縣</li>
-        <li id="helpList18">宜蘭縣</li>
+      <div class="citySelector-container">
+        <img id="close" src="./assets/close.png" />
+        <div class="citySelector" id="citySelector">
+          <div id="arrow" class="arrow">►</div>
+          <li id="helpList0">基隆市</li>
+          <li id="helpList1">新北市</li>
+          <li id="helpList2">臺北市</li>
+          <li id="helpList3">桃園市</li>
+          <li id="helpList4">新竹市</li>
+          <li id="helpList5">新竹縣</li>
+          <li id="helpList6">苗栗縣</li>
+          <li id="helpList7">臺中市</li>
+          <li id="helpList8">彰化縣</li>
+          <li id="helpList9">南投縣</li>
+          <li id="helpList10">雲林縣</li>
+          <li id="helpList11">嘉義縣</li>
+          <li id="helpList12">嘉義市</li>
+          <li id="helpList13">臺南市</li>
+          <li id="helpList14">高雄市</li>
+          <li id="helpList15">屏東縣</li>
+          <li id="helpList16">臺東縣</li>
+          <li id="helpList17">花蓮縣</li>
+          <li id="helpList18">宜蘭縣</li>
+        </div>
       </div>
+
       <svg
         version="1.1"
         id="svg2600"
@@ -1650,29 +1653,6 @@
           ]]>
         </i:pgf>
       </svg>
-      <img id="close" src="/close.png" />
-      <div class="citySelector" id="citySelector">
-        <div id="arrow" class="arrow">►</div>
-        <li id="helpList0">基隆市</li>
-        <li id="helpList1">新北市</li>
-        <li id="helpList2">臺北市</li>
-        <li id="helpList3">桃園市</li>
-        <li id="helpList4">新竹市</li>
-        <li id="helpList5">新竹縣</li>
-        <li id="helpList6">苗栗縣</li>
-        <li id="helpList7">臺中市</li>
-        <li id="helpList8">彰化縣</li>
-        <li id="helpList9">南投縣</li>
-        <li id="helpList10">雲林縣</li>
-        <li id="helpList11">嘉義縣</li>
-        <li id="helpList12">嘉義市</li>
-        <li id="helpList13">臺南市</li>
-        <li id="helpList14">高雄市</li>
-        <li id="helpList15">屏東縣</li>
-        <li id="helpList16">臺東縣</li>
-        <li id="helpList17">花蓮縣</li>
-        <li id="helpList18">宜蘭縣</li>
-      </div>
     </div>
   </body>
 </html>
