--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="author"
+      content="Jamie Yu, Joyce Liu,Yangun Li, Zora Wu,Owen Fang"
+    />
     <title>マリオ 4 fun</title>
     <script src="./script/index.js" defer></script>
     <link rel="stylesheet" href="./styles/style.css" />
