Feat: Add web desc

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
+      name="description"
+      content="這裡加點 neo-brutalism，再加點 8-bit 組成我們的即時天氣網頁"
+    />
+    <meta
       name="author"
       content="Jamie Yu, Joyce Liu,Yangun Li, Zora Wu,Owen Fang"
     />
